1. 빠른 예약 프래그먼트 UI 개선 2. "예약하기" 액티비티 추가  - 예약을 누르면 액티비티가 새로 나오면서 timer가 작동한다. 3. 내 상태 프래그먼트 수정  - update 함수 기준으로 view들이 동기화됨.

--- a/app/src/main/res/layout/activity_reserving.xml
+++ b/app/src/main/res/layout/activity_reserving.xml
@@ -11,17 +11,51 @@
     <com.dinuscxj.progressbar.CircleProgressBar
         android:id="@+id/progressbar"
         android:layout_width="307dp"
-        android:layout_height="296dp"
+        android:layout_height="300dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        custom:layout_constraintBottom_toBottomOf="parent"
-        custom:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/rsv_txt"
+        app:layout_constraintEnd_toEndOf="parent"
         custom:layout_constraintHorizontal_bias="0.511"
         custom:layout_constraintStart_toStartOf="parent"
         custom:layout_constraintTop_toTopOf="parent"
         custom:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/rsv_txt"
+        android:layout_width="125dp"
+        android:layout_height="77dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="228dp"
+        android:text="TextView"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.192"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/rsv_cancel"
+        android:layout_width="117dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/buttonshape"
+        android:text="에약취소"
+        android:textColor="@color/activity_background"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.859"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rsv_txt"
+        app:layout_constraintVertical_bias="0.817" />
 
 
 </android.support.constraint.ConstraintLayout>
