--- a/app/src/main/res/layout/fragment_mystatus.xml
+++ b/app/src/main/res/layout/fragment_mystatus.xml
@@ -102,7 +102,11 @@
 
         </LinearLayout>
 
-
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="사용종료" />
 
 
 </LinearLayout>
