--- a/app/src/main/res/layout/fragment_quickreserve.xml
+++ b/app/src/main/res/layout/fragment_quickreserve.xml
@@ -8,55 +8,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/circularImageView"
-        android:layout_width="305dp"
-        android:layout_height="294dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:src="@drawable/jal"
-        app:civ_border_color="#EEEEEE"
-        app:civ_border_width="8dp"
-        app:civ_shadow="true"
-        app:civ_shadow_color="@color/gray"
-        app:civ_shadow_radius="10"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        custom:layout_constraintBottom_toBottomOf="parent"
-        custom:layout_constraintVertical_bias="0.002" />
-
 
     <Button
         android:id="@+id/btn_quick_res"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginRight="36dp"
+        android:layout_width="161dp"
+        android:layout_height="43dp"
+        android:layout_marginEnd="8dp"
+
         android:layout_marginBottom="8dp"
+        android:background="@drawable/buttonshape"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
         android:text="빠른 예약"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/btn_stop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.97"
+        app:layout_constraintVertical_bias="0.938"
         custom:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btn_stop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="92dp"
-        android:layout_marginBottom="28dp"
-        android:text="종료"
-        app:layout_constraintBottom_toBottomOf="parent"
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary" />
 
     <TextView
         android:id="@+id/txt_sta"
