1. 타이머 UI 모던하게 수정 2. 메인 액티비티  - onStart() 에서 user_login 호출 제외  - 사용중일 경우 어플이 껐다 켰을 경우 유저의 상태가 ONLINE으로 변하게 됨.

--- a/app/src/main/res/layout/activity_reserving.xml
+++ b/app/src/main/res/layout/activity_reserving.xml
@@ -9,6 +9,10 @@
 
 
     <com.dinuscxj.progressbar.CircleProgressBar
+        app:progress_stroke_width="3dp"
+        app:progress_stroke_cap="square"
+        app:progress_start_color="@color/app_blue_dark"
+        app:progress_end_color="@color/amber_primary"
         android:id="@+id/progressbar"
         android:layout_width="307dp"
         android:layout_height="300dp"
