--- a/app/src/main/res/layout/status_reserve.xml
+++ b/app/src/main/res/layout/status_reserve.xml
@@ -6,7 +6,7 @@
 
 
     <ProgressBar
-        android:id="@+id/pb_reserve"
+        android:id="@+id/pb"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="200dp"
         android:layout_height="200dp"
